--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicholaus Ruffin Portfolio</title>
-</head>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Nick Ruffin Portfolio</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<header>
-    <h1>Nick Ruffin</h1>
-</header>
-<body>
+    <body>
+    <!--Header Section-->
+        <header>
+            <h1 class="Logo">Nicholaus Ruffin</h1>
+            <nav>
+                <ul class="nav-items">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Resume</a></li>
+                </ul>
+            </nav>
+        </header>
+    <!--Header Section Ends-->
     
-</body>
+    <!--Hero Section Starts-->
+
+    
+    </body>
 </html>
