Added Hero Image

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -25,7 +25,10 @@
     <!--Header Section Ends-->
     
     <!--Hero Section Starts-->
-
+        <div class="hero-container">
+            <img src="./Images/her-image.jpg" alt="" class="hero-image">
+            <h2>Some cool txt</h2>
+        </div>
     
     </body>
 </html>
