Added My Portfolio to hero IMG

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -27,7 +27,9 @@
     <!--Hero Section Starts-->
         <div class="hero-container">
             <img src="./Images/her-image.jpg" alt="" class="hero-image">
-            <h2>Some cool txt</h2>
+            <div class="hero-text">
+            <h2>My Portfolio</h2>
+            </div>
         </div>
     
     </body>
