Cleaned up Css styles and added comments

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -26,7 +26,7 @@
     
     <!--Hero Section Starts-->
         <div class="hero-container">
-            <img src="./Images/her-image.jpg" alt="" class="hero-image">
+            <img src="./Images/her-image.jpg" alt="Hero Image">
             <div class="hero-text">
             <h2>My Portfolio</h2>
             </div>
