Added About Me Section

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -31,6 +31,28 @@
             <h2>My Portfolio</h2>
             </div>
         </div>
-    
+     <!--Hero Section Ends-->
+
+     <section class="aboutme-container">
+         <h2 class="about-me">About <br> Me</h2>
+         <div class="aboutme-text">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                <br>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+            </p>
+        </div>
+     </section>
+
+     <section class="work-container">
+        <h2 class="work-me"></h2>
+        <div class="work-text">
+
+       </div>
+    </section>
+
     </body>
 </html>
