Added Flexbox Layout to Css

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -33,26 +33,31 @@
         </div>
      <!--Hero Section Ends-->
 
-     <section class="aboutme-container">
-         <h2 class="about-me">About <br> Me</h2>
-         <div class="aboutme-text">
+    <div class="flexbox-container">
+        <div class="flexbox-item aboutme-item-1">About <br>ME</div>
+        <div class="flexbox-item aboutme-item-2">
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
-                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                <br>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Eligendi a nihil quod ipsa accusantium provident nostrum, <br>
+                sequi molestias distinctio tempore facere officiis sit ullam molestiae adipisci 
+            </p>
+            <p>
+                minima maiores voluptate odit quibusdam illo cumque ad, ex nemo. Optio blanditiis voluptas, 
+                assumenda est perferendis quia fugiat totam sit excepturi maxime error nulla.
             </p>
         </div>
-     </section>
+    </div>
+        
+    <div class="flexbox-container">
+        <div class="flexbox-item work-item-1">Work</div>
+        <div class="flexbox-item work-item-2"></div>
+    </div>
 
-     <section class="work-container">
-        <h2 class="work-me"></h2>
-        <div class="work-text">
 
-       </div>
-    </section>
-
+    <footer>
+        <div class="flexbox-container">
+            <div class="flexbox-item contactme-item-1">Contact <br>ME</div>
+            <div class="flexbox-item contactme-item-2">
+    </footer>
     </body>
 </html>
