--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -53,11 +53,17 @@
         <div class="flexbox-item work-item-2"></div>
     </div>
 
-
     <footer>
         <div class="flexbox-container">
             <div class="flexbox-item contactme-item-1">Contact <br>ME</div>
             <div class="flexbox-item contactme-item-2">
+                <ul class="contactme-nav">
+                    <li><a href="#">601-481-5048</a></li>
+                    <li><a href="#">nruffin95@gmail.com</a></li>
+                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
     </footer>
     </body>
 </html>
