Added Links To footer

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -59,9 +59,9 @@
             <div class="flexbox-item contactme-item-2">
                 <ul class="contactme-nav">
                     <li><a href="#">601-481-5048</a></li>
-                    <li><a href="#">nruffin95@gmail.com</a></li>
-                    <li><a href="#">GitHub</a></li>
-                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="mailto: nruffin95@gmail.com">nruffin95@gmail.com</a></li>
+                    <li><a href="https://github.com/nruffin95">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/nick-ruffin/">LinkedIn</a></li>
                 </ul>
             </div>
     </footer>
