Added Mockup boxes to Work Container

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -51,9 +51,16 @@
     
     <!--Work Section Starts-->
 
-    <div class="work-container">
-        <div class="workbox-item workbox-item-1" >Work</div>
+    <div class="container">
+        <p class="item-1">Work</p>
+        <div class="box2">Box 2</div>
+        <div class="box3">Box 3</div>
+        <div class="box4">Box 4</div>
+        <div class="box5">Box 5</div>
+        <div class="box5">Box 5</div>
+        <div class="box6">Box 6</div>
     </div>
+
 
     <!--Work Section Starts-->
 
