Added Pictures to div boxes

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -53,12 +53,11 @@
 
     <div class="container">
         <p class="item-1">Work</p>
-        <div class="box2">Box 2</div>
-        <div class="box3">Box 3</div>
-        <div class="box4">Box 4</div>
-        <div class="box5">Box 5</div>
-        <div class="box5">Box 5</div>
-        <div class="box6">Box 6</div>
+            <div class="box2">Surf Report</div> 
+            <div class="box3">Led Wall</div>
+            <div class="box4">JavaScript</div>
+            <div class="box5">Caculator</div>
+            <div class="box6">Run Buddy</div>
     </div>
 
 
