--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -15,10 +15,10 @@
             <h1 class="Logo">Nicholaus Ruffin</h1>
             <nav>
                 <ul class="nav-items">
-                    <li><a href="#">About Me</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="#aboutme">About Me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="./Images/Nicholaus-Ruffin.pdf" download="Resume">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -35,7 +35,7 @@
     
      <!--About Me Section Starts-->
     <div class="flexbox-container">
-        <div class="flexbox-item aboutme-item-1">About <br>ME</div>
+        <div class="flexbox-item aboutme-item-1" id="aboutme">About <br>ME</div>
         <div class="flexbox-item aboutme-item-2">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
@@ -52,7 +52,7 @@
     <!--Work Section Starts-->
 
     <div class="container">
-        <p class="item-1">Work</p>
+        <p class="item-1" id="work">Work</p>
             <div class="box2">Surf Report</div> 
             <div class="box3">Led Wall</div>
             <div class="box4">JavaScript</div>
@@ -66,7 +66,7 @@
     <!--Contact Me Section Starts-->
     <footer>
         <div class="flexbox-container">
-            <div class="flexbox-item contactme-item-1">Contact <br>ME</div>
+            <div class="flexbox-item contactme-item-1" id="contact">Contact <br>ME</div>
             <div class="flexbox-item contactme-item-2">
                 <ul class="contactme-nav">
                     <li><a href="#">601-481-5048</a></li>
