Added Font Weight and links to Run Buddy

--- a/portfolio-project/index.html
+++ b/portfolio-project/index.html
@@ -53,11 +53,11 @@
 
     <div class="container">
         <p class="item-1" id="work">Work</p>
-            <div class="box2">Surf Report</div> 
+            <div class="box2">Surf Report</div>
             <div class="box3">Led Wall</div>
             <div class="box4">JavaScript</div>
             <div class="box5">Caculator</div>
-            <div class="box6">Run Buddy</div>
+            <a href="https://nruffin95.github.io/run-buddy/"><div class="box6">Run Buddy</div></a>
     </div>
 
 
